--- a/back_of_site/styles.css
+++ b/back_of_site/styles.css
@@ -1,4 +1,8 @@
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: black;
     font-family: 'Courier', monospace;
     color: antiquewhite;
