--- a/back_of_site/styles.css
+++ b/back_of_site/styles.css
@@ -1,4 +1,6 @@
 body {
+    height: 100%;
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -46,5 +48,10 @@ p {
     width: 100px;
     height: 100px;
     border-radius: 25px;
+}
+
+.horizontal {
+    display: flex;
+    flex-direction: row;
 }
 
