--- a/back_of_site/styles.css
+++ b/back_of_site/styles.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-image: url("https://fsd.multiurok.ru/html/2019/01/10/s_5c37480636665/1048065_1.jpeg");
     font-family: 'Courier', monospace;
     color: antiquewhite;
 }
