--- a/back_of_site/styles.css
+++ b/back_of_site/styles.css
@@ -6,6 +6,10 @@ body {
     justify-content: center;
     align-items: center;
     background-image: url("https://fsd.multiurok.ru/html/2019/01/10/s_5c37480636665/1048065_1.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0;
     font-family: 'Courier', monospace;
     color: antiquewhite;
 }
